@@ -1,7 +1,5 @@
 * : Should we inhibit the power manager when a screensaver is inhibited by a movie player?
 
-* : Brightness popup indicating the current level.
-
 * : Search for leacks if any.
 
 * : Option to sleep when system is idle for a long time (does anybody needs this?).
