@@ -1,4 +1,7 @@
 
+2009-03-30 21:21 Ali aliov@xfce.org 
+	 * : Added brightness popup+fix in XSyncAlarm error iin idle function+Fix reacration of popup window in the brightness plugin
+
 2009-03-30 14:58 Ali aliov@xfce.org 
 	 * : Fix some typos, Thanks to Per Kongstad
 
